--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 other.rar
 .vscode/*
-ProxyPool-master/*
-ProxyPool-master1/*
 ProxyPoolPro-master/*
+Crawler/测试/*
+CookiesPool-master/*
+.gitignore
